Adjust Unit-Tests and add some more.